QVector: silence clang warning about memmove

Also made a small comment fix

Task-number: QTBUG-53605
Change-Id: Ica9a06fe7a70f92f2a19a6df3ffdeaf1985e2eb6
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@theqtcompany.com>

cregit: 9224255f13952e5b4092208c8cae1a31ab5c6a19 https://github.com/qt/qtbase/commit/9224255f13952e5b4092208c8cae1a31ab5c6a19